--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Digital-Contraptions-Imaginarium/twitter2newsbeuter#readme",
   "dependencies": {
+    "async": "^2.0.0-rc.6",
     "feed": "^0.3.0",
     "twitter": "^1.3.0",
     "underscore": "^1.8.3",
