--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "twitter2rss",
   "version": "0.1.9",
-  "description": "twitter2rss ===========",
+  "description": "twitter2rss",
   "main": "twitter2rss-render.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
