--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/Digital-Contraptions-Imaginarium/twitter2rss#readme",
   "dependencies": {
     "async": "^2.1.4",
+    "feed": "^0.3.1",
     "fs-extra": "^2.0.0",
     "im.dico.t2": "^0.1.0",
     "sqlite3": "^3.1.8",
